MODBULKOPS-61 - Reported "Completed" status instead of "Completed with errors" (#65)